--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,20 +14,20 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   dynamic_color: ^1.5.4
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.3
   flutter_riverpod: ^2.1.3
   riverpod: ^2.1.3
-  riverpod_annotation: ^1.1.1
+  riverpod_annotation: ^2.0.2
   url_launcher: ^6.1.10
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-  riverpod_generator: ^1.1.1
+  riverpod_generator: ^2.1.4
   build_runner: ^2.3.3
 
 flutter:
   uses-material-design: true
-
