--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -14,20 +14,27 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   dynamic_color: ^1.5.4
-  google_fonts: ^4.0.3
+  google_fonts: ^5.1.0
   flutter_riverpod: ^2.1.3
+  http: ^1.1.0
   riverpod: ^2.1.3
   riverpod_annotation: ^2.0.2
   url_launcher: ^6.1.10
   url_strategy: ^0.2.0
+  material_design_icons_flutter: ^7.0.7296
+  cached_network_image: ^3.2.3
+  carousel_slider: ^4.2.1
+  photo_view: ^0.14.0
+  flutter_markdown: ^0.6.17
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
-  riverpod_generator: ^2.1.4
   build_runner: ^2.3.3
+  riverpod_generator: ^2.1.4
+  riverpod_lint: ^1.3.2
+  very_good_analysis: ^5.0.0+1
 
 flutter:
   uses-material-design: true
