--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,31 +9,26 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
-
-  cupertino_icons: ^1.0.2
-  dynamic_color: ^1.5.4
-  google_fonts: ^5.1.0
-  flutter_riverpod: ^2.1.3
-  http: ^1.1.0
-  riverpod: ^2.1.3
-  riverpod_annotation: ^2.0.2
-  url_launcher: ^6.1.10
-  url_strategy: ^0.2.0
-  material_design_icons_flutter: ^7.0.7296
+  bloc: ^8.1.2
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
-  photo_view: ^0.14.0
+  cupertino_icons: ^1.0.2
+  dynamic_color: ^1.5.4
+  equatable: ^2.0.5
+  flutter:
+    sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_markdown: ^0.6.17
+  google_fonts: ^5.1.0
+  http: ^1.1.0
+  material_design_icons_flutter: ^7.0.7296
+  photo_view: ^0.14.0
+  url_launcher: ^6.1.10
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  build_runner: ^2.3.3
-  riverpod_generator: ^2.1.4
-  riverpod_lint: ^1.3.2
   very_good_analysis: ^5.0.0+1
 
 flutter:
