--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   url_launcher: ^6.1.10
   url_strategy: ^0.2.0
 
-dev_dependencies:
+dev_dependencies
   flutter_test:
     sdk: flutter
   very_good_analysis: ^5.0.0+1
