--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,13 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_markdown: ^0.6.17
+  flutter_riverpod: ^2.3.6
   google_fonts: ^5.1.0
   http: ^1.1.0
   material_design_icons_flutter: ^7.0.7296
   photo_view: ^0.14.0
+  riverpod: ^2.3.6
+  riverpod_annotation: ^2.1.1
   url_launcher: ^6.1.10
   url_strategy: ^0.2.0
 
