--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  bloc: ^8.1.2
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
@@ -17,7 +16,6 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
   flutter_markdown: ^0.6.17
   flutter_riverpod: ^2.3.6
   google_fonts: ^5.1.0
@@ -25,13 +23,14 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   photo_view: ^0.14.0
   riverpod: ^2.3.6
-  riverpod_annotation: ^2.1.1
   url_launcher: ^6.1.10
   url_strategy: ^0.2.0
 
 dev_dependencies:
+  custom_lint: ^0.4.0
   flutter_test:
     sdk: flutter
+  riverpod_lint: ^1.3.2
   very_good_analysis: ^5.0.0+1
 
 flutter:
