--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "dart.flutterSdkPath": "/home/azlir/.puro/envs/stable/flutter",
-    "dart.sdkPath": "/home/azlir/.puro/envs/stable/flutter/bin/cache/dart-sdk"
+    "dart.flutterSdkPath": "/home/azlir/.puro/envs/beta/flutter",
+    "dart.sdkPath": "/home/azlir/.puro/envs/beta/flutter/bin/cache/dart-sdk"
 }
