--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,22 +16,22 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_markdown: ^0.6.17
+  flutter_markdown: ^0.7.1
   flutter_riverpod: ^2.3.6
   google_fonts: ^6.1.0
   http: ^1.1.0
   material_design_icons_flutter: ^7.0.7296
-  photo_view: ^0.14.0
+  photo_view: ^0.15.0
   riverpod: ^2.3.6
   url_launcher: ^6.1.10
-  url_strategy: ^0.2.0
+  url_strategy: ^0.3.0
 
 dev_dependencies:
-  custom_lint: ^0.5.1
+  custom_lint: ^0.6.4
   flutter_test:
     sdk: flutter
   riverpod_lint: ^2.0.0
-  very_good_analysis: ^5.0.0+1
+  very_good_analysis: ^6.0.0
 
 flutter:
   uses-material-design: true
